tests/base/invalid/Function_CompileFail_4.whiley
int f(int x):
    this.out.println(str(x))

void System::main([string] args):
    f(1)
